removed URL from metadata section, also added profile to pom.xml